--- a/css/admin/admin_base.css
+++ b/css/admin/admin_base.css
@@ -3,6 +3,7 @@ body {
   min-height: 100vh; /* Ensure the body takes up at least the full height of the viewport */
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 .sidebar {
   width: 250px;
