--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -5,10 +5,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap Demo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link href="{% static '/user/home2.css'  %}" rel="stylesheet" />
     <link href="{% static 'user/chatbox.css'  %}" rel="stylesheet" />
   </head>
@@ -30,10 +42,7 @@
 
       <!-- Wrap content blocks in a div -->
       <div id="content-wrapper">
-        {% block home%}
-        {% endblock %}
-        {% block page-content%}
-        {% endblock %}
+        {% block home%} {% endblock %} {% block page-content%} {% endblock %}
       </div>
 
       <!-- Footer -->
