--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -29,14 +29,14 @@
       <header class="navbar">
         <div class="navbar-logo">
           <img src="{% static '/assets/logo.png' %}" alt="logo" />
-          <span>Lapu-Lapu City Tourism</span>
+          <span>LAPU-LAPU CITY TOURISM</span>
         </div>
         <nav class="navbar-links">
-          <a href="{% url 'user_side_destination_list' %}">Destinations</a>
-          <a href="{% url 'activity' %}">Activities</a>
-          <a href="{% url 'accommodation' %}">Accommodations</a>
-          <a href="{% url 'food' %}">Food & Drinks</a>
-          <a href="#chat">Let's Chat!</a>
+          <a href="{% url 'user_side_destination_list' %}">DESTINATIONS</a>
+          <a href="{% url 'activity' %}">ACTIVITIES</a>
+          <a href="{% url 'accommodation' %}">ACCOMODATIONS</a>
+          <a href="{% url 'food' %}">FOOD & DRINKS</a>
+          <a href="#chat">LET'S CHAT!</a>
         </nav>
       </header>
 
